# BoonGamble

./: .gitignore  README.md  config.yml.sample  pyproject.toml
boongamble/: __init__.py  bot.py  botb.py  config.py  gamble.py
tests/: gambletest.py
