[tool.poetry]
name = "boongamble"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
pyyaml = "^6.0.2"
lxml = "^5.3.0"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
numpy = "^2.1.0"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
